# api-ittoku-tech

./: .editorconfig  .env  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.flyio  Gemfile  README.md  docker-compose.yml  fly.toml  makefile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
api/: Cargo.toml
api/src/: lib.rs
app/controllers/: application_controller.rb  comments_controller.rb  posts_controller.rb  searches_controller.rb
app/controllers/api/v1/: posts_controller.rb  searches_controller.rb
app/models/: post.rb
config/: routes.rb
config/environments/: development.rb
config/initializers/: cors.rb
core/: Cargo.toml
core/src/: mutation.rs  query.rs
crates/api/: main.rs
crates/api/routes/: mod.rs  posts.rs
crates/db/: Cargo.toml
crates/db/core/: lib.rs  mutation.rs  query.rs
crates/db/entity/: Cargo.toml
crates/db/entity/src/: lib.rs  post.rs  prelude.rs
crates/db/migration/: Cargo.toml
crates/db/migration/src/: lib.rs  m20230501_000001_create_post_table.rs  m20230501_000002_create_comment_table.rs
db/: schema.rb  seeds.rb
doc/: model.md  routing.md  user_authentication.md
entity/: Cargo.toml
entity/src/: comment.rs  lib.rs  post.rs
migration/src/: lib.rs
migrations/2023-03-01-183036_create_posts/: up.sql
migrations/2023-03-23-144157_create_posts/: up.sql
migrations/2023-04-01-160457_create_comments/: up.sql
src/: api_error.rs  app.rs  config.rs  db.rs  error_handler.rs  errors.rs  lib.rs  main.rs  routes.rs  schema.rs  test.rs
src/api/: mod.rs  posts.rs
src/comments/: mod.rs  model.rs  route.rs  test.rs
src/db/: migrator.rs  mod.rs  models.rs
src/db/crud/: mutation.rs  query.rs
src/db/entities/: comment.rs  post.rs
src/db/migrator/: m20230501_000001_create_post_table.rs  m20230501_000002_create_comment_table.rs
src/domain/posts/: mod.rs  model.rs  repository.rs  usecase.rs
src/posts/: mod.rs  model.rs  route.rs  test.rs
src/routes/: mod.rs  posts.rs
src/users/: mod.rs  route.rs  test.rs
test/controllers/: comments_controller_test.rb  posts_controller_test.rb  searches_controller_test.rb
test/controllers/api/v1/: posts_controller_test.rb  searches_controller_test.rb
test/controllers/api/v1/users/: confirmations_controller_test.rb  omniauth_callbacks_controller_test.rb  passwords_controller_test.rb  registrations_controller_test.rb  sessions_controller_test.rb  unlocks_controller_test.rb
test/fixtures/: posts.yml  users.yml
test/models/: post_test.rb
tests/: api_tests.rs  post_tests.rs
tests/utils/: json_data.rs  mod.rs  prelude.rs  setup.rs
