[package]
name = "api-ittoku-tech"
version = "0.1.0"
edition = "2021"

[[bin]]
bench = false
path = "crates/api/main.rs"
name = "api-ittoku-tech"

[workspace]
members = ["crates/db"]

[dependencies]
db = { path = "crates/db" }

actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"

# actix-web = "4.3.1"
# chrono = { version = "0.4.24", features = ["serde"] }
# diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
# env_logger = "0.10.0"
# log = "0.4.17"
# once_cell = "1.17.1"
# r2d2 = "0.8.10"
# serde = { version = "1.0.158", features = ["derive"] }
# serde_json = "1.0.94"
# uuid = { version = "1.3.0", features = ["serde", "v4"] }
# validator = { version = "0.16.0", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
