[package]
name = "api-ittoku-tech"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.162"
serde_json = "1.0.96"

[dependencies.sea-orm]
version = "0.11.3"
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-postgres",
]

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
    "runtime-async-std-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
once_cell = "1.17.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
