[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
migration = { path = "../migration" }
entity = { path = "../entity" }

actix-web = "4.3.1"
serde = "1.0.162"
serde_json = "1.0.96"
