[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
chrono = "0.4.24"

[dependencies.sea-orm]
version = "0.11.3"
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-postgres",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

